k8s/user-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-auth-deployment
  namespace: analytics
  labels:
    app: user-auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-auth-service
  template:
    metadata:
      labels:
        app: user-auth-service
    spec:
      serviceAccountName: user-auth-sa
      containers:
        - name: user-auth
          image: tush1809/user-auth:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      imagePullSecrets:
        - name: regcred
